@@ -582,6 +582,21 @@
 </tr>
 </table>
 
+<h4>Response changed to move "cores" into "sockets" to differentiate which
+	cores and sockets are allocated. Changed from named dictionary of node
+	names to array containing objects with nodename set.</h4>
+<table class="tchange">
+<tr class="trchange">
+	<td class="tdfield">Updated response.</td>
+	<td class="tdchange">
+		<ul>
+			<li>.components.schemas."v0.0.38_job_resources".properties.allocated_nodes</li>
+			<li>.components.schemas."v0.0.38_node_allocation"</li>
+		</ul>
+	</td>
+</tr>
+</table>
+
 <h3>openapi/v0.0.35 (src/plugins/openapi/v0.0.35/openapi.json)</h3>
 
 <h4>Removal notice</h4>
